cvars-macros/tests/test_fnlike_sorted_bad.stderr
error: proc macro panicked
  --> tests/test_fnlike_sorted_bad.rs:3:1
   |
3  | / cvars! {
4  | |     #![cvars(sorted)]
5  | |
6  | |     a: i32 = 1,
...  |
13 | |     d: i32 = 4,
14 | | }
   | |_^
   |
   = help: message: cvars not sorted: `ab` >= `aaa`
