cvars-macros/tests/test_fnlike_sorted_bad.rs
use cvars::cvars;

cvars! {
    #![cvars(sorted)]

    a: i32 = 1,
    aa: i32 = 11,
    ab: i32 = 12,
    aaa: i32 = 111,

    b: i32 = 2,
    c: i32 = 3,
    d: i32 = 4,
}

fn main() {}
